{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 10,
  "lineage": "bf41dfac-1bee-3bd5-0663-0d6d1b32d5bf",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-24T12:22:40.234-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cloudops-vault-lab/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/global/networks/cloudops-vpc",
            "params": [],
            "priority": 1000,
            "project": "cloudops-vault-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-allowed"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2026-02-24T12:22:40.180-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cloudops-vault-lab/global/firewalls/deny-all-ingress",
            "log_config": [],
            "name": "deny-all-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/global/networks/cloudops-vpc",
            "params": [],
            "priority": 65534,
            "project": "cloudops-vault-lab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/global/firewalls/deny-all-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260210",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/zones/europe-west1-b/disks/app-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-02-24T12:23:06.628-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cloudops-vault-lab/zones/europe-west1-b/instances/app-server",
            "instance_id": "3207385252199904837",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "8msz4Ac1FHk=",
            "name": "app-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.76.242.73",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/global/networks/cloudops-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/regions/europe-west1/subnetworks/subnet-app",
                "subnetwork_project": "cloudops-vault-lab",
                "vlan": 0
              }
            ],
            "project": "cloudops-vault-lab",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/zones/europe-west1-b/instances/app-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app-server",
              "ssh-allowed"
            ],
            "tags_fingerprint": "URWzqR9smk8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260210",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/zones/europe-west1-b/disks/db-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-02-24T12:23:05.317-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cloudops-vault-lab/zones/europe-west1-b/instances/db-server",
            "instance_id": "4357250054351992390",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "8msz4Ac1FHk=",
            "name": "db-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.76.147.232",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/global/networks/cloudops-vpc",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/regions/europe-west1/subnetworks/subnet-db",
                "subnetwork_project": "cloudops-vault-lab",
                "vlan": 0
              }
            ],
            "project": "cloudops-vault-lab",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/zones/europe-west1-b/instances/db-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db-server",
              "ssh-allowed"
            ],
            "tags_fingerprint": "rYkT8gAsrIg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet_db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vault_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260210",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/zones/europe-west1-b/disks/vault-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-02-24T12:23:06.985-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cloudops-vault-lab/zones/europe-west1-b/instances/vault-server",
            "instance_id": "6600276632830981701",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "8msz4Ac1FHk=",
            "name": "vault-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.38.153.196",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/global/networks/cloudops-vpc",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/regions/europe-west1/subnetworks/subnet-app",
                "subnetwork_project": "cloudops-vault-lab",
                "vlan": 0
              }
            ],
            "project": "cloudops-vault-lab",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/zones/europe-west1-b/instances/vault-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh-allowed",
              "vault-server"
            ],
            "tags_fingerprint": "esRP6r9HfUE=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet_app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cloudops-vault-lab/global/networks/cloudops-vpc",
            "mtu": 0,
            "name": "cloudops-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1910434188280182421",
            "numeric_id": "1910434188280182421",
            "project": "cloudops-vault-lab",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/global/networks/cloudops-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-02-24T12:22:43.432-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/cloudops-vault-lab/regions/europe-west1/subnetworks/subnet-app",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnet-app",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/global/networks/cloudops-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cloudops-vault-lab",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/regions/europe-west1/subnetworks/subnet-app",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4492509268971599484
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-02-24T12:22:42.064-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/cloudops-vault-lab/regions/europe-west1/subnetworks/subnet-db",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "subnet-db",
            "network": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/global/networks/cloudops-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cloudops-vault-lab",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudops-vault-lab/regions/europe-west1/subnetworks/subnet-db",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2628884871467218557
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}